# rules_128tech

./: .bazelrc  .gitattributes  .gitignore  WORKSPACE  deps.bzl  gen_docs.sh  pyproject.toml
docs/: BUILD.bazel
exec_wrapper/: BUILD.bazel  rules.bzl  rules.md  template.sh
private/: BUILD.bazel  cfg.bzl
private/toolchains/: BUILD.bazel  README.md  setup_macos.sh
python/: BUILD.bazel  env.bzl  env.md  pip.bzl  pip.md  versions.bzl
python/compile/: BUILD.bazel  compile.bzl  compile_pip_requirements_wrapper_template.sh
python/coverage/: BUILD.bazel  collector.py  rules.bzl  rules.md
python/entry_point/: BUILD.bazel  rules.bzl  rules.md  template.py
python/lint/: rules.bzl
python/par/: BUILD.bazel  kour.py  rules.bzl
python/par/test/: BUILD.bazel  magic_number.py  parkour_test.sh  test_magic_number.py
python/pkg/: rules.bzl
python/py_unzip/: BUILD.bazel  __main__.py.tmpl  py_binary_shim.sh.tmpl  rezipper.py  rules.bzl
python/pylint/: BUILD.bazel  pylint_main.py  rules.bzl
python/pytest/: BUILD.bazel  main.py  main.py.template  rules.bzl
rules_128tech/: BUILD.bazel  sharder.py
rules_128tech/pylint_plugins/: BUILD.bazel  mock_patch_autospec.py  mock_patch_autospec_test.py
rules_128tech/pytest_plugins/: BUILD.bazel  pytest_bazel_sharder.py
util/: BUILD.bazel  genrules.bzl  genrules.md  run_args.sh  run_in_workspace.bzl  run_in_workspace.md  template.bzl  template.md
