load("@io_bazel_skydoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

stardoc(
    name = "env-doc",
    out = "env.md",
    input = "env.bzl",
    tags = ["docs"],
    visibility = ["//docs:__pkg__"],
    deps = ["//private:cfg"],
)

stardoc(
    name = "pip-doc",
    out = "pip.md",
    input = "pip.bzl",
    tags = ["docs"],
    visibility = ["//docs:__pkg__"],
)

stardoc(
    name = "versions-doc",
    out = "versions.md",
    input = "versions.bzl",
    tags = ["docs"],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "versions",
    srcs = [":versions.bzl"],
    visibility = ["//visibility:public"],
)
