load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load("@rules_python//python:defs.bzl", "py_runtime")
load(
    "//python:versions.bzl",
    "PYTHON3",
    "PYTHON3_MINOR",
)

package(default_visibility = ["//:__subpackages__"])

py_runtime(
    name = "linux_x86_64_py3_runtime",
    interpreter_path = "/usr/bin/%s" % PYTHON3,
    python_version = "PY3",
)

py_runtime_pair(
    name = "linux_x86_64_runtimes",
    py3_runtime = ":linux_x86_64_py3_runtime",
)

toolchain(
    name = "linux_x86_64_python_toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    toolchain = ":linux_x86_64_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

py_runtime(
    name = "osx_x86_64_py3_runtime",
    interpreter_path = "/opt/128technology/bazel/bin/%s" % PYTHON3,
    python_version = "PY3",
)

py_runtime_pair(
    name = "osx_x86_64_runtimes",
    py3_runtime = ":osx_x86_64_py3_runtime",
)

toolchain(
    name = "osx_x86_64_python_toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
    toolchain = ":osx_x86_64_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

sh_binary(
    name = "setup_macos",
    srcs = ["setup_macos.sh"],
    args = [PYTHON3_MINOR],
)
