load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load("@rules_python//python:defs.bzl", "py_runtime")
load(
    "//python:versions.bzl",
    "PYTHON2",
    "PYTHON2_MINOR",
    "PYTHON3",
    "PYTHON3_MINOR",
)

package(default_visibility = ["//:__subpackages__"])

py_runtime(
    name = "linux_x86_64_py2_runtime",
    interpreter_path = "/usr/bin/%s" % PYTHON2,
    python_version = "PY2",
)

py_runtime(
    name = "linux_x86_64_py3_runtime",
    interpreter_path = "/usr/bin/%s" % PYTHON3,
    python_version = "PY3",
)

py_runtime_pair(
    name = "linux_x86_64_runtimes",
    py2_runtime = ":linux_x86_64_py2_runtime",
    py3_runtime = ":linux_x86_64_py3_runtime",
)

toolchain(
    name = "linux_x86_64_python_toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    toolchain = ":linux_x86_64_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

py_runtime(
    name = "osx_py2_runtime",
    interpreter_path = "/opt/128technology/bazel/bin/%s" % PYTHON2,
    python_version = "PY2",
)

py_runtime(
    name = "osx_py3_runtime",
    interpreter_path = "/opt/128technology/bazel/bin/%s" % PYTHON3,
    python_version = "PY3",
)

py_runtime_pair(
    name = "osx_runtimes",
    py2_runtime = ":osx_py2_runtime",
    py3_runtime = ":osx_py3_runtime",
)

toolchain(
    name = "osx_python_toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:osx",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:osx",
    ],
    toolchain = ":osx_runtimes",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

sh_binary(
    name = "setup_macos",
    srcs = ["setup_macos.sh"],
    args = [
        PYTHON2_MINOR,
        PYTHON3_MINOR,
    ],
)
